--- a/src/pages/checkout/checkout.styles.scss
+++ b/src/pages/checkout/checkout.styles.scss
@@ -17,12 +17,17 @@
       text-transform: capitalize;
       width: 23%;
 
+      &:nth-child(2) {
+        width: 27%;
+      }
+
       &:last-child {
         width: 8%;
       }
     }
   }
 
+  
   .total {
     margin-top: 30px;
     margin-left: auto;
