added redux-persist, to persist cart values across sessions

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -10,6 +10,11 @@
     width: 70px;
     padding: 25px;
   }
+  .logo {
+    height: 115%;
+    padding-bottom: -300px;
+
+  }
 
   .options {
     width: 50%;
