--- a/src/components/checkout-item/checkout-item.styles.scss
+++ b/src/components/checkout-item/checkout-item.styles.scss
@@ -23,18 +23,12 @@
     display: flex;
     flex-direction: row;
     width: 23%;
+    margin-right: 12px;
   }
   .quantity {
-    padding-left: 20px;
-    padding-right: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
-  .add-item-button {
-  }
-
-  .remove-item-button {
-
-  }
-
   .remove-button {
     padding-left: 12px;
     cursor: pointer;
