--- a/src/components/collection-item/collection-item.styles.scss
+++ b/src/components/collection-item/collection-item.styles.scss
@@ -21,17 +21,35 @@
     top: 255px;
     display: none;
   }
-
-  &:hover {
-    .image {
-      opacity: 0.8;
+    @media screen and(max-width: 800px) {
+      display: block;
+      opacity: 0.9;
+      min-width: unset;
+      padding: 0 10px;
     }
-    .custom-button {
-      opacity: 0.85;
-      display: flex;
+
+    &:hover {
+      .image {
+        opacity: 0.8;
+      }
+      .custom-button {
+        opacity: 0.85;
+        display: flex;
+      }
+    }
+
+  @media screen and (max-width: 800px) {
+    width: 40vw;
+
+    &:hover {
+      .image {
+        opacity: unset;
+      }
+      .custom-button {
+        opacity: unset;
+      }
     }
   }
-
   .collection-footer {
     width: 100%;
     height: 5%;
