--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -5,10 +5,22 @@
   justify-content: space-between;
   margin-bottom: 25px;
 
+  @media screen and (max-width: 800px) {
+    height: 60px;
+    padding: 10px;
+    margin-bottom: 20px;
+  }
+
   .logo-container {
-    height: 100%;
-    width: 70px;
-    padding: 25px;
+    width: 50px;
+    padding: 0;
+
+    @media screen and (max-width: 800px) {
+      height: 60px;
+      padding: 10px;
+      margin-bottom: 20px;
+    }
+
   }
   .logo {
     height: 115%;
@@ -22,6 +34,10 @@
     display: flex;
     align-items: center;
     justify-content: flex-end;
+
+    @media screen and (max-width: 800px) {
+      width: 80%;
+    }
 
     .option {
       padding: 10px 15px;
