--- a/src/components/menu-item/menu-item.styles.scss
+++ b/src/components/menu-item/menu-item.styles.scss
@@ -8,7 +8,7 @@
   border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
-  
+
   &:hover {
     cursor: pointer;
 
@@ -31,7 +31,9 @@
   &:last-child {
     margin-left: 7.5px
   }
-
+  @media screen and (max-width: 800px) {
+    height: 200px;
+  }
   .background-image {
     width: 100%;
     height: 100%;
